# authenticode-parser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  authenticode-config.cmake
.github/workflows/: cmake.yml
dev_scripts.py/: dump_pe_signature.py  hex_to_c.py
examples/: CMakeLists.txt  Makefile  authenticode_dumper.c
include/: authenticode.h
include/authenticode-parser/: authenticode.h
src/: authenticode.c  certificate.c  certificate.h  countersignature.c  countersignature.h  helper.c  helper.h
tests/: CMakeLists.txt  data.h
tests/integration/: test.cpp  test_microsoft.cpp  test_non_microsoft.cpp
tests/unit/: certificate.cpp  countersignature.cpp  helper.cpp
